--- a/NetLibrary.vcxproj
+++ b/NetLibrary.vcxproj
@@ -129,6 +129,7 @@
     <ClCompile Include="CPacket.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="NetLibrary.cpp" />
+    <ClCompile Include="Profiler.cpp" />
     <ClCompile Include="RingBuffer.cpp" />
     <ClCompile Include="ServerLog.cpp" />
   </ItemGroup>
@@ -138,6 +139,7 @@
     <ClInclude Include="CPacket.h" />
     <ClInclude Include="NetLibrary.h" />
     <ClInclude Include="ObjectPool.h" />
+    <ClInclude Include="Profiler.h" />
     <ClInclude Include="RingBuffer.h" />
     <ClInclude Include="ServerLog.h" />
   </ItemGroup>
