--- a/NetLibrary.vcxproj
+++ b/NetLibrary.vcxproj
@@ -127,21 +127,21 @@
     <ClCompile Include="CEchoTest.cpp" />
     <ClCompile Include="CMyServer.cpp" />
     <ClCompile Include="CPacket.cpp" />
+    <ClCompile Include="Log.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="NetLibrary.cpp" />
     <ClCompile Include="Profiler.cpp" />
     <ClCompile Include="RingBuffer.cpp" />
-    <ClCompile Include="ServerLog.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CEchoTest.h" />
     <ClInclude Include="CMyServer.h" />
     <ClInclude Include="CPacket.h" />
+    <ClInclude Include="Log.h" />
     <ClInclude Include="NetLibrary.h" />
     <ClInclude Include="ObjectPool.h" />
     <ClInclude Include="Profiler.h" />
     <ClInclude Include="RingBuffer.h" />
-    <ClInclude Include="ServerLog.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
