--- a/NetLibrary.vcxproj.filters
+++ b/NetLibrary.vcxproj.filters
@@ -27,9 +27,6 @@
     <ClCompile Include="NetLibrary.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="ServerLog.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="CMyServer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
@@ -37,6 +34,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Profiler.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Log.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
@@ -53,9 +53,6 @@
     <ClInclude Include="NetLibrary.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="ServerLog.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="CEchoTest.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
@@ -63,6 +60,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Profiler.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Log.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
