--- a/NetLibrary.vcxproj
+++ b/NetLibrary.vcxproj
@@ -124,8 +124,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CEchoServer.cpp" />
     <ClCompile Include="CEchoTest.cpp" />
-    <ClCompile Include="CMyServer.cpp" />
     <ClCompile Include="CPacket.cpp" />
     <ClCompile Include="Log.cpp" />
     <ClCompile Include="main.cpp" />
@@ -134,14 +134,15 @@
     <ClCompile Include="RingBuffer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CEchoServer.h" />
     <ClInclude Include="CEchoTest.h" />
-    <ClInclude Include="CMyServer.h" />
     <ClInclude Include="CPacket.h" />
     <ClInclude Include="LockFreeQueue.h" />
     <ClInclude Include="LockFreeStack.h" />
     <ClInclude Include="Log.h" />
     <ClInclude Include="NetLibrary.h" />
-    <ClInclude Include="ObjectPool.h" />
+    <ClInclude Include="ObjectPool_LF.h" />
+    <ClInclude Include="ObjectPool_TLS.h" />
     <ClInclude Include="Profiler.h" />
     <ClInclude Include="RingBuffer.h" />
   </ItemGroup>
