--- a/NetLibrary.vcxproj.filters
+++ b/NetLibrary.vcxproj.filters
@@ -53,19 +53,16 @@
     <ClInclude Include="Log.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="ObjectPool_LF.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="LockFreeStack.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="LockFreeQueue.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="ObjectPool_TLS.h">
+    <ClInclude Include="CEchoServer.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="CEchoServer.h">
+    <ClInclude Include="ObjectPool.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
